# sightline

./: .gitignore  Cargo.toml  README.md  index.html  package.json  vite.config.ts
importer/: Cargo.toml
importer/src/: lib.rs  main.rs
scripts/: bun-preload.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: timeline_benches.rs
src-tauri/src/: api.rs  chat.rs  lib.rs  main.rs  tag_palette.rs  timeline.rs
src-tauri/tests/: chat.rs  commands.rs
src/api/: types.ts
src/checkin/: MorningCheckInFlow.ts
src/components/: ChatPane.tsx  CommandPalette.tsx  DateGutterOverlay.tsx  TimelineWorkspace.tsx
src/editor/: TimelineEditor.tsx  operations.ts
src/lib/: block-store.tsx  tag-store.tsx
src/llm/: prompt.ts
src/reflection/: getInitialPrompt.ts
src/sync/: TimelineSyncController.ts
sum-tree/: Cargo.toml
sum-tree/src/: cursor.rs  lib.rs
tasks/1-rework-timeline/: spec.md
tasks/2-rework-tree-and-reflection/: spec.md
tasks/3-journal-and-tagging/: spec.md
tasks/4-tagging-ux/: spec.md
tasks/5-date-markers/: spec.md  ticket-1-backend-block-metadata.md  ticket-2-frontend-date-gutter.md  ticket-3-accessibility-date-labels.md  ticket-4-command-palette-reflect.md
tests/: api-contract.test.ts  chat-pane.test.tsx  command-palette.test.tsx  date-gutter-overlay.test.ts  editor-operations.test.ts  get-initial-prompt.test.ts  llm-prompt.test.ts  morning-checkin.test.ts  placeholder.test.ts  setup.ts  sync-controller.test.ts  tag-plugin.test.tsx  timeline-editor.test.tsx  timeline-workspace.test.tsx
xtask/: Cargo.toml
(+7 files in other folders)
