[package]
name = "importer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
tracing.workspace = true
chrono.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5.0"
sightline_lib = { package = "sightline", path = "../src-tauri" }

[dev-dependencies]
assert_fs = "1.1.1"
filetime = "0.2.25"
